# benchmark3

./: .gitignore  CLAUDE.md  README.md  duwocn.md  pytest.ini
silent_drift_miner/: README.md  pyproject.toml
silent_drift_miner/configs/: targets.yaml
silent_drift_miner/data/candidates/: spring-boot.jsonl
silent_drift_miner/data/fixtures/: pandas_changelog.md
silent_drift_miner/src/case_bank/: __init__.py  __main__.py  eval_pack.py  index.py  pack.py  schema.py  validation.py
silent_drift_miner/src/silent_drift_miner/: __init__.py  adapter_contracts.py  artifacts.py  audit.py  autodiscovery.py  bench.py  case_bank_writer.py  cli.py  client_generation.py  curation.py  ecosystems.py  oracle.py  python_status.py  reproduction.py  schema.py  triage.py
silent_drift_miner/src/silent_drift_miner/adapters/: __init__.py  registry.py
silent_drift_miner/src/silent_drift_miner/commands/: __init__.py  audit.py  autodiscovery.py  (+10 more)
silent_drift_miner/tests/: conftest.py  test_adapter_registry.py  test_adapter_runner.py  test_artifacts.py  test_autodiscovery.py  test_bench_audit.py  test_case_bank.py  test_case_bank_writer.py  test_cli_offline.py  test_client_generation.py  test_curation.py  test_dotnet_adapter.py  test_ecosystem_gates.py  test_go_adapter.py  test_js_adapter.py  test_jvm_adapter.py  test_oracle_generate.py  test_php_adapter.py  test_python_status.py  test_real_cases.py  test_reproduction_plan.py  test_reproduction_run.py  test_ruby_adapter.py  test_rules.py  test_triage.py
silent_drift_miner/tools/: demo_offline_spring_boot.py  demo_synthetic_e2e.py
(+1985 files in other folders)
